Correcting code for deprecated features Fixing build.gradle for different Java versions